use PublishSite and updated plugin logic.